@@ -1,3 +1,10 @@
+2015-08-03  Peter Bergner  <bergner@vnet.ibm.com>
+
+	Backport from mainline:
+	2015-08-03  Peter Bergner  <bergner@vnet.ibm.com>
+
+	* gcc.target/powerpc/htm-tabort-no-r0.c: New test.
+
 2015-08-03  Szabolcs Nagy  <szabolcs.nagy@arm.com>
 
 	Backport form mainline r226496.
