@@ -1,3 +1,11 @@
+2015-08-03  Peter Bergner  <bergner@vnet.ibm.com>
+
+	Backport from mainline:
+	2015-08-03  Peter Bergner  <bergner@vnet.ibm.com>
+
+	* config/rs6000/htm.md (tabort.): Restrict the source operand to
+	using a base register.
+
 2015-08-03  John David Anglin  <danglin@gcc.gnu.org>
 
 	PR target/67060
